# claude-code-agent-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
1.foundations/: 04_claude_agent_options.py  05_system_prompt.py  06_permission_mode.py  08_async_iterator_message.py
2.sdk-patterns/: 01_agent_loop.py  02_sessions_and_state.py  03_streaming_input.py  05_message_types.py  06_claude_sdk_client.py  08_context_windows.py
3.tools_mcp/: 02_custom_tool_functions.py  03_in_process_mcp_servers.py  07_web_search_tool.py
4.advanced_patterns/: 04_file_checkpointing.py  05_slash_commands.py  08_extended_thinking.py
5.productions/: 01_cost_and_usage_tracking.py  03_reduce_hallucinations.py
6.multi_agent_n_skills/: 04_skills_best_practices.py  05_plugins_in_sdk.py  07_agent_orchestration.py  08_context_delegation.py  09_sequential_handoff.py
Tools_MCP/: 01_mcp_tool_decorator.py  04_remote_mcp_servers.py  05_tool_search.py  06_bash_tool.py  08_file_editor_tools.py
_sandbox/: agent_prompt.md  doc_0.txt  doc_1.txt  doc_2.txt  facts.md
adk_client/: claude.py  claude_code_agent_sdk.py  hooks.py  prompt.py
advanced_patterns/: 01_hooks.py  02_permission_handling.py  03_user_approvals.py  05_slash_commands.py  06_todo_tracking.py  07_modifying_system_prompts.py
db/: audit.py
foundations/: 01_install.py  02_anyio_asyncio.py  03_query_basics.py  04_claude_agent_options.py  07_cwd_working_dir.py  08_async_iterator_message.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
multi_agent_n_skills/: 01_subagents_agent_tool.py  02_subagent_type.py  (+2 more)
(+23 files in other folders)
