[project]
name = "claude-code-agent-sdk"
version = "0.1.0"
description = "Learning examples for the Claude Agent SDK: foundations, core patterns, and tools/MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "python-dotenv>=1.0.1",
    "anyio>=4.0.0",
]
